--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/backend": "^1.8.0",
+    "@aws-amplify/ui-react": "^6.7.1",
     "aws-amplify": "^6.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.8.0",
     "@aws-amplify/backend-cli": "^1.4.2",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
